Fix internal listing table CSS
We want the table to scroll horizontally when zoomed in, but we do not want the scrollbar to show otherwise, so use `overflow-x: auto`

--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -78,7 +78,7 @@ $small-screen: 768px;
   }
 
   &__table-container {
-    overflow-x: scroll;
+    overflow-x: auto;
   }
 
   &-listing {
